--- a/src/app/context-schema-editor/context-schema-editor.component.html
+++ b/src/app/context-schema-editor/context-schema-editor.component.html
@@ -36,7 +36,8 @@
   <!-- Schema Editor -->
   <ng-container *ngIf="schema; else loading">
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-3 gap-4">
-      <div *ngFor="let path of fieldPaths" class="flex flex-col border border-gray-200 rounded-lg p-4 bg-white shadow-sm text-sm gap-2">
+      <div *ngFor="let path of fieldPaths"
+        class="flex flex-col border border-gray-200 rounded-lg p-4 bg-white shadow-sm text-sm gap-2">
         <label class="font-medium text-gray-700 flex items-center gap-1">
           <i-lucide [img]="FileTextIcon" class="w-4 h-4 text-gray-500"></i-lucide>
           {{ path }}
@@ -48,16 +49,19 @@
             <option value="">-- Select type --</option>
             <option *ngFor="let type of supportedTypes" [value]="type">{{ type }}</option>
           </select>
-        
+
           <!-- Value Input -->
           <ng-container [ngSwitch]="fieldMap[path].type">
-            <input *ngSwitchCase="'string'" type="text" class="border px-2 py-1 rounded text-sm" [(ngModel)]="fieldMap[path].value" />
-            <input *ngSwitchCase="'number'" type="number" class="border px-2 py-1 rounded text-sm" [(ngModel)]="fieldMap[path].value" />
+            <input *ngSwitchCase="'string'" type="text" class="border px-2 py-1 rounded text-sm"
+              [(ngModel)]="fieldMap[path].value" />
+            <input *ngSwitchCase="'number'" type="number" class="border px-2 py-1 rounded text-sm"
+              [(ngModel)]="fieldMap[path].value" />
             <label *ngSwitchCase="'boolean'" class="inline-flex items-center gap-2">
               <input type="checkbox" class="h-4 w-4" [(ngModel)]="fieldMap[path].value" />
               <span class="text-sm">True / False</span>
             </label>
-            <textarea *ngSwitchCase="'object'" class="border px-2 py-1 rounded text-sm h-24" [(ngModel)]="fieldMap[path].value"></textarea>
+            <textarea *ngSwitchCase="'object'" class="border px-2 py-1 rounded text-sm h-24"
+              [(ngModel)]="fieldMap[path].value"></textarea>
           </ng-container>
         </ng-container>
       </div>
