--- a/src/app/expression-builder/expression-builder.component.html
+++ b/src/app/expression-builder/expression-builder.component.html
@@ -1,14 +1,5 @@
 <ng-container *ngIf="isBrowser && languageDesc">
-  <code-editor
-    [(ngModel)]="value"
-    (ngModelChange)="onCodeChange($event)"
-    [theme]="'light'"
-    [lineWrapping]="true"
-    [languages]="languages"
-    [language]="languageDesc.name"
-    [setup]="setup"
-    [class]="class"
-    [lineWrapping]="lineWrapping"
-    [placeholder]="'type your expressions here'"
-  ></code-editor>
+  <code-editor [(ngModel)]="value" (ngModelChange)="onCodeChange($event)" [theme]="'light'" [lineWrapping]="true"
+    [languages]="languages" [language]="languageDesc.name" [setup]="setup" [class]="class" [lineWrapping]="lineWrapping"
+    [placeholder]="'type your expressions here'"></code-editor>
 </ng-container>
