change to pascalcase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <!-- Left: Logo and App name -->
     <div class="flex items-center gap-2">
       <i-lucide [img]="GripVertical" class="w-5 h-5 text-blue-600"></i-lucide>
-      <h1 class="text-xl font-bold text-gray-800">Rules Engine</h1>
+      <h1 class="text-xl font-bold text-gray-800">rules Engine</h1>
     </div>
 
     <!-- Right: Mobile menu toggle and user avatar -->
@@ -47,7 +47,7 @@
         </a>
         <a routerLink="/rules" class="flex items-center space-x-2 hover:bg-gray-800 px-3 py-2 rounded">
           <i-lucide [img]="LayoutDashboard" class="w-5 h-5"></i-lucide>
-          <span>Rules</span>
+          <span>rules</span>
         </a>
       </nav>
     </aside>
